--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "bpf-omega-api",
-  "version": "0.0.0",
+  "name": "bgcalculator",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.13.3",
     "cookie-parser": "~1.3.5",
+    "cors": "^2.7",
     "debug": "~2.2.0",
+    "ejs": "^2.5.1",
     "express": "~4.13.1",
     "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
     "kerberos": "0.0.18",
     "mongodb": "^1.4",
     "mongoose": "^4.4",
     "mongoskin": "^1.3.20",
-    "cors": "^2.7",
-    "request": "^2.67"
+    "morgan": "~1.6.1",
+    "redis": "^2.6.2",
+    "request": "^2.67",
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
