--- a/public/bower.json
+++ b/public/bower.json
@@ -21,6 +21,7 @@
     "jquery": "^2.2.1",
     "angular-animate": "^1.5.0",
     "angular-aria": "^1.5.0",
-    "angular-material": "^1.0.5"
+    "angular-material": "^1.0.5",
+    "angular-ui-router": "~0.3.1"
   }
 }
