--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "amazon-cognito-identity-js": "^1.8.0",
     "body-parser": "^1.13.3",
     "cookie-parser": "~1.3.5",
     "cors": "^2.7",
