--- a/public/bower.json
+++ b/public/bower.json
@@ -22,6 +22,10 @@
     "angular-animate": "^1.5.0",
     "angular-aria": "^1.5.0",
     "angular-material": "^1.0.5",
-    "angular-ui-router": "~0.3.1"
+    "angular-ui-router": "~0.3.1",
+    "aws-sdk-js": "~2.7.10",
+    "amazon-cognito-identity-js": "*",
+    "firebase": "~3.6.3",
+    "angularfire": "~2.1.0"
   }
 }
